# Parameterization_Playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt
examples/BFF/: BFF.cpp  CMakeLists.txt
examples/CM/: CM.cpp  CMakeLists.txt
examples/DP/: CMakeLists.txt  DP.cpp
src/: CMakeLists.txt
src/BFF/: BFF.cpp  BFF.hpp  CMakeLists.txt
src/CM/: CM.cpp  CM.hpp  CMakeLists.txt
src/DP/: CMakeLists.txt  DP.cpp  DP.hpp  DP_old.cpp
src/Rectangular/: CMakeLists.txt  Rectangular.cpp  Rectangular.hpp
tests/: CMakeLists.txt  tiny_alligator.cpp
